[tool.poetry]
name = "ros2-clang-tidy"
version = "0.1.0"
description = ""
authors = ["Y.Hisaki <yhisaki31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argcomplete = "^3.5.0"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ros2-clang-tidy="ros2_clang_tidy.main:main"